test/integration/two-kongs/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1
spec:
  ingressClassName: kong1
  rules:
  - http:
      paths:
      - path: /via-kong1
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo2
spec:
  ingressClassName: kong2
  rules:
  - http:
      paths:
      - path: /via-kong2
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 8080
